Work around https://github.com/bumptech/glide/issues/5003