@@ -176,5 +176,9 @@ tasks.withType(JavaCompile).configureEach {
 				// The framework in IssueInfoAdapter and GlideReset needs GlideModules at runtime.
 				"-Xlint:-deprecation",
 		]
+		options.fork = true
+		options.forkOptions.jvmArgs += [
+				"--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+		]
 	}
 }
